--- a/content/blog/20240610.md
+++ b/content/blog/20240610.md
@@ -25,3 +25,11 @@ ncwa -a dimension_to_delete input.nc output.nc
 
 And that's it. That ncwa uses a crazy amount of RAM by the way. So you might need to like, split up the file into smaller parts first.
 Good luck figuring out how to do that with NCO.
+
+EDIT:
+Quick way to get time slice from nc file:
+
+
+```bash
+ncrcat -F -d time,start_index,end_index input.nc output.nc
+```
